<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.mcntraining.demo2.AboutSRGC.Placement">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarr"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/Theme.AppCompat.DayNight.NoActionBar" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarr"
        android:layout_centerHorizontal="true"
        android:clipToPadding="true"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="47dp"
                android:text="Corporate Cell"
                android:background="@drawable/border"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView32"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/corporatecell" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView34"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="82dp"
                android:labelFor="@+id/scrollview"
                android:text="Industrial Visit"
                android:background="@drawable/border"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView35"
                android:layout_marginTop="48dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/industrial" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView37"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="86dp"
                android:textSize="20dp"
                android:background="@drawable/border"
                android:text="Industrial Training"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView39"
                android:layout_marginTop="57dp"
                android:textSize="18sp"
                android:padding="@dimen/activity_horizontal_margin"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/industrainig" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView41"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="74dp"
                android:background="@drawable/border"
                android:text="INDUSTRY ACADEMIA INTERFACE"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textView43"
                android:layout_marginTop="69dp"
                android:textSize="18sp"
                android:padding="@dimen/activity_horizontal_margin"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:text="In addition SRGC is well connected as it associates with various sector of industry that enriches the programmes offered." />

           


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
